[package]
name = "xlsx_to_sqlite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
roxmltree = "0.18.0"
calamine = "0.21.1"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
